apps/nowait/overlays/dev/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: nowait-dev
  labels:
    app.kubernetes.io/part-of: nowait
    environment: dev
