apps/nowait/overlays/dev/deployment-api-patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nowait-api
spec:
  replicas: 1
  template:
    spec:
      containers:
        - name: nowait-api
          resources:
            requests:
              cpu: 250m
              memory: 512Mi
            limits:
              cpu: 500m
              memory: 1Gi
